--- a/style.css
+++ b/style.css
@@ -5,15 +5,24 @@ box-sizing: border-box;
 header{
 height: 80px;
 background-color: rgb(24, 128, 93);
+margin-bottom: 50px;
+}
+.logotext{
+vertical-align: middle;
 }
 img{
 height: 70px;
-padding-left: 50px;
-padding-top: 7px;
 }
 h1{
-font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-family: Verdana, Tahoma, sans-serif;
 font-size: 50px;
-display: inline;
-line-height: 2.6;
+display: inline-block;
+}
+main{
+    background-color: antiquewhite;
+    width: 70%;
+    margin: auto;
+}
+.task , .today , .upcoming{
+padding: 50px;
 }
