--- a/style.css
+++ b/style.css
@@ -53,24 +53,28 @@ border-radius: 7px;
 background-color: #47A9E8;
 color:white;
 font-size: 10px;
+border: 3px solid #47A9E8;
 }
 .goal{
 background-color:#9C72E3;
 color:white;
 font-size: 10px;
 border-radius: 7px;
+border: 3px solid #9C72E3;
 }
 .recruit{
 background-color:#63BEA9;
 color:white;
 font-size: 10px;
 border-radius: 7px;
+border: 3px solid #63BEA9;
 }
 .mobile{
 background-color:#F39C34;
 color:white;
 font-size: 10px;
 border-radius: 7px;
+border: 3px solid #F39C34;
 }
 .check{
 list-style-image: url(img/mark.ico);
